--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!--<app-nav-bar [stickyAreaComponent]="stickyArea" (newStickyEmitted)="addSticky($event)"></app-nav-bar>-->
-<!--<app-sticky-area #stickyArea [stickiesChild]="stickiesParent"></app-sticky-area>-->
+<app-todo-list [itemsChild]="itemsParent"></app-todo-list>
 <router-outlet></router-outlet>
