update item? not linked

--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -3,4 +3,7 @@
   <p> {{item.content}}</p>
   <p>{{item.createdDate}}</p>
   <p>{{item.modifiedDate}}</p>
+  <button>update</button>
 </div>
+
+<!--<app-item-update (updateItemEmitted)="updateItem($event)"></app-item-update>-->
