fix put request

--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,6 +1,6 @@
 <div class="todo-list">
   <div *ngFor="let item of itemsChild">
-    <app-item [item]="item"></app-item>
+    <app-item [itemListComponent]="itemListComponent" [item]="item"></app-item>
   </div>
 </div>
 
