--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -6,5 +6,7 @@
   <!--<button>update</button>-->
 </div>
 <button (click)="view(item.id)">View</button>
+<button (click)="delete(item.id)">Delete</button>
+<button *ngIf="showItem" (click)="cancel(item.id)">Cancel</button>
 <app-item-view *ngIf="showItem" [itemListComponent]="itemListComponent" [item]="item"></app-item-view>
 <!--<app-item-update (updateItemEmitted)="updateItem($event)"></app-item-update>-->
