--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -4,4 +4,8 @@
   </div>
 </div>
 
+<div class="item-create">
+  <app-item-create [itemListComponent]="itemListComponent"></app-item-create>
+</div>
+
 
