--- a/src/app/item-create/item-create.component.html
+++ b/src/app/item-create/item-create.component.html
@@ -1,14 +1,10 @@
-<div class="item-view">
-  <h2>Create todo Item</h2>
+<div class="item-create">
+  <h2>Create new Todo item</h2>
   <form [formGroup]="itemForm" (ngSubmit)="createItem()">
-    Title: <input type="text" id="title" class="formFields" required formControlName="title"/><br/>
-    <!--<label *ngIf="!itemForm.controls.title.valid">first name is required</label> <br/><br/>-->
-    Content: <input type="text" id="content" class="formFields" required formControlName="content"/><br/>
-    <!--<label *ngIf="!itemForm.controls.content.valid">last name is required</label> <br/><br/>-->
-    Modified Date: <input type="text" id="date_modified" class="formFields" readonly formControlName="date_modified"/> <br/>
-    <!--<label *ngIf="!contactForm.controls.email.valid">email is required</label><br/><br/>-->
-    Created Date: <input type="text" id="date_created" class="formFields" readonly formControlName="date_created"/> <br/>
-    <!--<label *ngIf="!contactForm.controls.phone.valid">phone is required</label><br/><br/>-->
+    <section><input type="text" id="title" placeholder="title" class="formFields" required formControlName="title"/></section>
+
+    <section><textarea type="text" id="content" placeholder="content" class="formFields" required formControlName="content"></textarea><br/>
+    </section>
     <button type="submit" [disabled]="itemForm.invalid">Create</button>
   </form>
 </div>
