--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,11 @@
-nav {
+nav { // nav bar
   width: 100%;
   height: 50px;
   line-height: 50px;
   background-color: #afdeb7;
   position: fixed;
-  h2{
+
+  h2{ // title "items"
     margin:0;
     vertical-align: middle;
     margin-left: 4%;
