--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
   <h2>My Todo List</h2>
 </nav>
+<!--Link to the list-->
 <app-todo-list [itemsChild]="itemsParent"></app-todo-list>
 <router-outlet></router-outlet>
