--- a/src/app/item-create/item-create.component.html
+++ b/src/app/item-create/item-create.component.html
@@ -1,3 +1,4 @@
+<!--create item form-->
 <div class="item-create">
   <h2>Create new Todo item</h2>
   <form [formGroup]="itemForm" (ngSubmit)="createItem()">
