--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,3 +1,4 @@
+<!--item shown in the list-->
 <div class="item">
   <div class="content">
     <h2> {{item.title}} </h2>
@@ -6,10 +7,10 @@
     <!--<p>{{item.modifiedDate}}</p>-->
   </div>
 
-
   <button (click)="view(item.id)">View</button>
   <button (click)="delete(item.id)">Delete</button>
   <button *ngIf="showItem" (click)="cancel(item.id)">Cancel</button>
+  <!--Show item if view button is clicked, while cancel button is clicked, hide-->
   <app-item-view *ngIf="showItem" [itemListComponent]="itemListComponent" [item]="item"></app-item-view>
 </div>
 
