--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,9 +1,11 @@
+<!--show list of items-->
 <div class="todo-list">
   <div *ngFor="let item of itemsChild">
     <app-item [itemListComponent]="itemListComponent" [item]="item"></app-item>
   </div>
 </div>
 
+<!--create item work area-->
 <div class="item-create">
   <app-item-create [itemListComponent]="itemListComponent"></app-item-create>
 </div>
