--- a/src/app/item-list/item-list.component.scss
+++ b/src/app/item-list/item-list.component.scss
@@ -12,3 +12,28 @@
   position: fixed;
   top: 32%;
 }
+
+.item-create-small {
+  top: 32%;
+  padding: 0;
+  right: 0;
+  background-color: #afdeb7;
+  border-radius: 5px;
+  position: fixed;
+  height: 60px;
+  width: 60px;
+  text-align: center;
+  span {
+    color: white;
+    font-weight: bolder;
+    font-size: 45px;
+    a{
+      text-decoration: none;
+    }
+    a:visited {
+      font-size: 12px;
+      color: white;
+      text-decoration: none;
+    }
+  }
+}
