--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -11,4 +11,11 @@
     margin-top: 0;
     margin-bottom: 4px;
   }
+  a{
+    text-decoration: none;
+  }
+  a:visited {
+    color: black;
+    text-decoration: none;
+  }
 }
